完成进度条

--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -57,7 +57,9 @@
             <div class="video">
                 <video autoplay src=""></video>
                 <div class="watermark">bilibili</div>
-                <div class="progressBar1"></div>
+                <div class="progressBar1">
+                    <div></div>
+                </div>
                 <div class="control">
                     <div id="follow">关注</div>
                     <div id="report">举办</div>
@@ -70,7 +72,9 @@
                             <div id="timer">时间</div>
                         </div>
 
-                        <div id="progressBar"></div>
+                        <div id="progressBar">
+                            <div></div>
+                        </div>
 
                         <div class="right">
                             <div id="clarity">清晰度</div>
