--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>video</title>
+    <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./video.css">
     <style media="(min-width:2020px)">
         body {
