开发注册登录页面

--- a/二轮考核/index.html
+++ b/二轮考核/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./signIn.css">
     <style media="(min-width:2020px)">
         body {
             width: 1980px;
@@ -127,8 +128,12 @@
 
     <div class="content w">
     </div>
+
+
+
 </body>
 
 <script src="./index.js"></script>
+<script src="./signIn.js"></script>
 
 </html>
