--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -8,6 +8,8 @@
     <title>video</title>
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./video.css">
+    <link rel="stylesheet" href="./signIn.css">
+
     <style media="(min-width:2020px)">
         body {
             width: 1980px;
@@ -185,5 +187,6 @@
     </div>
 </body>
 <script src="video.js"></script>
+<script src="./signIn.js"></script>
 
 </html>
