--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -8,6 +8,8 @@
     <title>个人主页</title>
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./person.css">
+    <link rel="stylesheet" href="./signIn.css">
+
 
 </head>
 
@@ -113,5 +115,6 @@
         </div>
     </div>
 </body>
+<script src="./signIn.js"></script>
 
 </html>
