整合登录和评论功能，优化评论体验

--- a/二轮考核/index.html
+++ b/二轮考核/index.html
@@ -51,7 +51,9 @@
                 <input type="text" placeholder="大数据来秀一下吧"><i class="iconfont"></i>
             </form>
             <ul class="rightNav">
-                <li><img alt="" srcset="">头像啊</li>
+                <li>
+                    <div class="avata"></div>
+                </li>
                 <li><i class="iconfont">图标</i><span>大会员</span></li>
                 <li><i class="iconfont">图标</i><span>消息</span></li>
                 <li><i class="iconfont">图标</i><span>动态</span></li>
@@ -132,8 +134,8 @@
 
 
 </body>
-
-<script src="./index.js"></script>
 <script src="./signIn.js"></script>
+<script src="./index.js"></script>
+<script src="./common.js"></script>
 
 </html>
