--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -41,7 +41,9 @@
                 <input type="text" placeholder="大数据来秀一下吧"><i class="iconfont"></i>
             </form>
             <ul class="rightNav">
-                <li><img alt="" srcset="">头像啊</li>
+                <li>
+                    <div class="avata"></div>
+                </li>
                 <li><i class="iconfont">图标</i><span>大会员</span></li>
                 <li><i class="iconfont">图标</i><span>消息</span></li>
                 <li><i class="iconfont">图标</i><span>动态</span></li>
@@ -132,7 +134,7 @@
                     </div>
                 </div>
                 <div class="sendComments">
-                    <div class="avata">头像</div>
+                    <div class="avata"></div>
                     <input type="text" id="comments" placeholder="勇敢滴少年快去创造热评~">
                     <button class="commentSend">发布</button>
                 </div>
@@ -186,7 +188,8 @@
 
     </div>
 </body>
-<script src="video.js"></script>
 <script src="./signIn.js"></script>
+<script src="video.js"></script>
+<script src="./common.js"></script>
 
 </html>
