完成收藏功能在视频首页的效果

--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -32,7 +32,9 @@
                 <input type="text" placeholder="大数据来秀一下吧"><i class="iconfont"></i>
             </form>
             <ul class="rightNav">
-                <li><img alt="" srcset="">头像啊</li>
+                <li>
+                    <div class="avata"></div>
+                </li>
                 <li><i class="iconfont">图标</i><span>大会员</span></li>
                 <li><i class="iconfont">图标</i><span>消息</span></li>
                 <li><i class="iconfont">图标</i><span>动态</span></li>
@@ -113,10 +115,44 @@
                 <div class="description">avata</div>
             </div>
         </div>
+        <div class="head">我的投稿<i>数量</i></div>
+        <div class="myVideos">
+            <div class="myVideo">
+                <div class="video">
+                    <video src=""></video>
+                </div>
+                <div class="description">avata</div>
+            </div>
+            <div class="myVideo">
+                <div class="video">
+                    <video src=""></video>
+                </div>
+                <div class="description">avata</div>
+            </div>
+            <div class="myVideo">
+                <div class="video">
+                    <video src=""></video>
+                </div>
+                <div class="description">avata</div>
+            </div>
+            <div class="myVideo">
+                <div class="video">
+                    <video src=""></video>
+                </div>
+                <div class="description">avata</div>
+            </div>
+            <div class="myVideo">
+                <div class="video">
+                    <video src=""></video>
+                </div>
+                <div class="description">avata</div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="./signIn.js"></script>
 <script src="./common.js"></script>
+<script src="./person.js"></script>
 
 
 </html>
