--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -75,45 +75,61 @@
             </ul>
         </div>
     </div>
-    <div class="collections w">
-        <div class="head">我的收藏夹<i>数量</i></div>
-        <div class="collectionList">
 
-        </div>
-        <div class="head">我的投稿<i>数量</i></div>
-        <div class="myVideos">
-            <div class="myVideo">
-                <div class="video">
-                    <video src=""></video>
+    <div class="myClt content w">
+        <div class="edit">编辑栏</div>
+        <div class="collections">
+            <div class="default">
+                <div class="box">
+                    <video src="https://frontend.exam.aliyun.topviewclub.cn/videos/video10.mp4"></video>
+                    <div class="description">
+                        <p>Aerial view of a blue sea with big clouds</p>
+                        <p>Gabriella</p>
+                    </div>
                 </div>
-                <div class="description">avata</div>
+                <div class="detailInfo">
+                    <p>创建者</p>
+                    <p>多少个内容</p>
+                    <p>公开吗</p>
+                    <button>播放全部视频</button>
+                </div>
             </div>
-            <div class="myVideo">
-                <div class="video">
-                    <video src=""></video>
-                </div>
-                <div class="description">avata</div>
-            </div>
-            <div class="myVideo">
-                <div class="video">
-                    <video src=""></video>
-                </div>
-                <div class="description">avata</div>
-            </div>
-            <div class="myVideo">
-                <div class="video">
-                    <video src=""></video>
-                </div>
-                <div class="description">avata</div>
-            </div>
-            <div class="myVideo">
-                <div class="video">
-                    <video src=""></video>
-                </div>
-                <div class="description">avata</div>
+            <div class="head">我的收藏夹<i>数量</i></div>
+            <div class="collectionList">
             </div>
         </div>
     </div>
+
+    <div class="myVideo content w">
+        <div class="edit">上传的视频 编辑栏</div>
+        <div class="collections">
+            <div class="default">
+                <div class="box">
+                    <video src="https://frontend.exam.aliyun.topviewclub.cn/videos/video10.mp4"></video>
+                    <div class="description">
+                        <p>Aerial view of a blue sea with big clouds</p>
+                        <p>Gabriella</p>
+                    </div>
+                </div>
+                <div class="detailInfo">
+                    <p>创建者</p>
+                    <p>多少个内容</p>
+                    <p>公开吗</p>
+                    <button>播放全部视频</button>
+                </div>
+            </div>
+            <div class="head">我的收藏夹<i>数量</i></div>
+            <div class="collectionList">
+            </div>
+        </div>
+    </div>
+    <!-- <div class="inputTitleMask"></div>
+    <div class="inputTitle">
+        <div class="close">关闭</div>
+        <div class="title"><input type="text" placeholder="请输入标题"></div>
+        <div class="describe"><input type="text" placeholder="请输入简介"></div>
+        <button>投稿</button>
+    </div> -->
 </body>
 <script src="./signIn.js"></script>
 <script src="./common.js"></script>
