完成了上传视频，开始开发拖动排序

--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -77,7 +77,14 @@
     </div>
 
     <div class="myClt content w">
-        <div class="edit">编辑栏</div>
+        <div class="edit">
+            <div class="addList">添加收藏夹</div>
+            <ul>
+                <li draggable="true">默认收藏夹</li>
+                <li draggable="true">1</li>
+                <li draggable="true">2</li>
+            </ul>
+        </div>
         <div class="collections">
             <div class="default">
                 <div class="box">
@@ -101,23 +108,16 @@
     </div>
 
     <div class="myVideo content w">
-        <div class="edit">上传的视频 编辑栏</div>
+        <div class="edit">
+            <div class="addList">添加收藏夹</div>
+            <ul>
+                <li draggable="true">默认收藏夹</li>
+                <li draggable="true">1</li>
+                <li draggable="true">2</li>
+                <li draggable="true">3</li>
+            </ul>
+        </div>
         <div class="collections">
-            <div class="default">
-                <div class="box">
-                    <video src="https://frontend.exam.aliyun.topviewclub.cn/videos/video10.mp4"></video>
-                    <div class="description">
-                        <p>Aerial view of a blue sea with big clouds</p>
-                        <p>Gabriella</p>
-                    </div>
-                </div>
-                <div class="detailInfo">
-                    <p>创建者</p>
-                    <p>多少个内容</p>
-                    <p>公开吗</p>
-                    <button>播放全部视频</button>
-                </div>
-            </div>
             <div class="head">我的收藏夹<i>数量</i></div>
             <div class="collectionList">
             </div>
