--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人主页</title>
-    <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./person.css">
+    <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./signIn.css">
-
+    <style media="(min-width:2020px)">
+        body {
+            width: 1980px;
+        }
+    </style>
+    <style media="(max-width:1020px)">
+        body {
+            width: 1020px;
+        }
+    </style>
 
 </head>
 
