实现自己的视频和收藏的视频在个人主页播放功能

--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -92,6 +92,7 @@
                 <li draggable="true">默认收藏夹</li>
                 <li draggable="true">1</li>
                 <li draggable="true">2</li>
+                <li draggable="true">3</li>
             </ul>
         </div>
         <div class="collections">
