样式之滚动弹出header，字体图标

--- a/二轮考核/index.html
+++ b/二轮考核/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./signIn.css">
     <style media="(min-width:2020px)">
         body {
-            width: 1980px;
+            width: 2560px;
         }
     </style>
     <style media="(max-width:1020px)">
@@ -36,7 +36,8 @@
     <header>
         <span class="headNav">
             <ul class="leftNav">
-                <li><a href="#"><i class="iconfont"></i>首页</a></li>
+                <li class="hidden iconfont" style="display: none;">&#xe600;</li>
+                <li><a href="#"><i class="iconfont">&#xe601;</i>首页</a></li>
                 <li><a href="#"></a>番剧</li>
                 <li><a href="#"></a>直播</li>
                 <li><a href="#"></a>游戏中心</li>
@@ -44,38 +45,40 @@
                 <li><a href="#"></a>漫画</li>
                 <li><a href="#"></a>赛事</li>
                 <li><a href="#"></a>春日</li>
-                <li><a href="#"></a><i class="iconfont"></i>下载客户端</li>
+                <li><a href="#"></a><i class="iconfont">&#xe611;
+                    </i>下载客户端</li>
             </ul>
 
             <form action="search">
-                <input type="text" placeholder="大数据来秀一下吧"><i class="iconfont"></i>
+                <input type="text" placeholder="大数据来秀一下吧"><i class="iconfont">&#xe8d6;</i>
             </form>
             <ul class="rightNav">
                 <li>
                     <div class="avata"></div>
                 </li>
-                <li><i class="iconfont">图标</i><span>大会员</span></li>
-                <li><i class="iconfont">图标</i><span>消息</span></li>
-                <li><i class="iconfont">图标</i><span>动态</span></li>
-                <li><i class="iconfont">图标</i><span>收藏</span></li>
-                <li><i class="iconfont">图标</i><span>历史</span></li>
-                <li><i class="iconfont">图标</i><span>创作中心</span></li>
-                <li><a href="#"><i class="iconfont">图标</i><button>投稿</button></a></li>
+                <li><i class="iconfont">&#xe6c3;</i><span>大会员</span></li>
+                <li><i class="iconfont">&#xe6eb;</i><span>消息</span></li>
+                <li><i class="iconfont">&#xe827;</i><span>动态</span></li>
+                <li><i class="iconfont">&#xe617;</i><span>收藏</span></li>
+                <li><i class="iconfont">&#xe616;</i><span>历史</span></li>
+                <li><i class="iconfont">&#xe856;</i><span>创作中心</span></li>
+                <li><a href="#"><i class="iconfont">&#xe6b1;</i><button>投稿</button></a></li>
             </ul>
         </span>
-        <i class="logo">BiliBili图标</i>
+        <i id="logo"></i>
     </header>
 
     <div class="centerNav w">
         <div class="leftCenterNav">
             <section>
-                <li><a href="#"><i class="iconfont">icon</i>动态</a></li>
+                <li><a href="#"><i class="iconfont">&#xe827;</i>动态</a></li>
             </section>
             <section>
-                <li><a href="#"><i class="iconfont">icon</i>热门</a></li>
+                <li><a href="#"><i class="iconfont">&#xe62c;</i>热门</a></li>
             </section>
             <section>
-                <li><a href="#"><i class="iconfont">icon</i>频道</a></li>
+                <li><a href="#"><i class="iconfont">&#xe63e;</i><i class="iconfont">&#xe63e;</i><i
+                            class="iconfont">&#xe63e;</i>频道</a></li>
             </section>
 
         </div>
@@ -116,14 +119,17 @@
 
         <div class="rightCenterNav">
             <ul>
-                <li><i class="iconfont"></i>专栏</li>
+                <li><i class="iconfont">&#xe630;
+                    </i>专栏</li>
                 <li><i class="iconfont"></i>活动</li>
-                <li><i class="iconfont"></i>社区中心</li>
+                <li><i class="iconfont">&#xe625;
+                    </i>社区中心</li>
             </ul>
             <ul>
-                <li><i class="iconfont"></i>专栏</li>
-                <li><i class="iconfont"></i>活动</li>
-                <li><i class="iconfont"></i>社区中心</li>
+                <li><i class="iconfont">&#xe866;</i>直播</li>
+                <li><i class="iconfont">&#xe672;</i>课堂</li>
+                <li><i class="iconfont">&#xe867;
+                    </i>新歌热榜</li>
             </ul>
         </div>
     </div>
