--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -180,8 +180,9 @@
     <div class="hiddenMenu w">
         <div class="hiddenAvata">
         </div>
+        <div class="name">Erytos</div>
         <ul class="option">
-            <li><i class="iconfont">&#xe650;</i>主页</li>
+            <li><i class="iconfont"></i></li>
             <li><i class="iconfont">&#xe612;</i>动态</li>
             <li><i class="iconfont">&#xe6ac;</i>投稿</li>
             <li><i class="iconfont">&#xe6e9;</i>合集和列表</li>
@@ -189,14 +190,17 @@
             <li><i class="iconfont">&#xe627;</i>订阅</li>
             <li><i class="iconfont">&#xe60e;</i>设置</li>
         </ul>
-        <input type="text" class="search" placeholder="搜索收藏">
+        <div class="input">
+            <input type="text" class="search" placeholder="搜索收藏">
+            <i class="iconfont">&#xe8d6;</i>
+        </div>
         <div class="dataView">
             <ul>
-                <li>关注数</li>
-                <li>粉丝数</li>
-                <li>或赞数</li>
-                <li>播放次数</li>
-                <li>阅读数</li>
+                <li><span>关注数</span><span>1254</span></li>
+                <li><span>粉丝数</span><span>0</span></li>
+                <li><span>获赞数</span><span>0</span></li>
+                <li><span>播放次数</span><span>0</span></li>
+                <li><span>阅读数</span><span>0</span></li>
             </ul>
         </div>
     </div>
