视频控件样式

--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -154,19 +154,22 @@
             </div>
             <div class="video">
                 <video autoplay src=""></video>
-                <div class="watermark">bilibili</div>
+                <div class="watermark"><i class="up"></i><i class="iconfont">&#xe600;</i></div>
                 <div class="progressBar1">
                     <div></div>
                 </div>
+                <div class="play" style="opacity: 0;"><i class="iconfont">&#xe6ab;</i></div>
                 <div class="control">
-                    <div id="follow">关注</div>
-                    <div id="report">举办</div>
-                    <div class="play">播放图标</div>
+                    <div id="follow">
+                        <div class="avata"></div>+ 关注
+                    </div>
+                    <div id="report"><i class="iconfont">&#xe62f;</i></div>
+
                     <div id="worktable">
                         <div class="left">
                             <div id="pre"><i class="iconfont">&#xea88;</i></div>
-                            <div id="playAndPause"><i class="iconfont onPlay">&#xe619;</i><i
-                                    class="iconfont onPause">&#xea82;</i></div>
+                            <div id="playAndPause"><i class="iconfont onPlay">&#xe619;</i><i class="iconfont onPause"
+                                    style="display: none;">&#xea82;</i></div>
                             <div id="next"><i class="iconfont">&#xea7f;</i></div>
                             <div id="timer"></div>
                         </div>
@@ -176,7 +179,7 @@
                         </div>
 
                         <div class="right">
-                            <div id="clarity">清晰度</div>
+                            <div id="clarity">1080P 60帧</div>
                             <div id="speed">倍速</div>
                             <div id="volume">
                                 <i class="iconfont">
