视频控件样式

--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -180,7 +180,20 @@
 
                         <div class="right">
                             <div id="clarity">1080P 60帧</div>
-                            <div id="speed">倍速</div>
+                            <div id="speed">倍速
+                                <div class="speedHidden">
+                                    <div class="speedControl">
+                                        <ul>
+                                            <li>2.0x</li>
+                                            <li>1.5x</li>
+                                            <li>1.25x</li>
+                                            <li class="active">1.0x</li>
+                                            <li>0.75x</li>
+                                            <li>0.5x</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                             <div id="volume">
                                 <i class="iconfont">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 88 88" width="88" height="88"
@@ -261,7 +274,13 @@
                                         </g>
                                     </svg>
                                 </i>
-                                <div class="volControl"></div>
+                                <div class="volumeHidden">
+                                    <div class="volumeControl">
+                                        <div class="number">100</div>
+                                        <div class="volumeBar"></div>
+                                        <div class="volumeCurrent"></div>
+                                    </div>
+                                </div>
                             </div>
                             <div id="setting">
                                 <i class="iconfont">
