--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -49,7 +49,11 @@
             </form>
             <ul class="rightNav">
                 <li>
-                    <div class="avata"></div>
+                    <div class="avata">
+                        <div class="hidden">
+                            <button><i class="iconfont">&#xe626;</i>退出登录</button>
+                        </div>
+                    </div>
                 </li>
                 <li><i class="iconfont">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -520,7 +524,7 @@
                 <div id="barrageToggle">
                     <i class="iconfont barOn">&#xe60c;
                     </i>
-                    <i class="iconfont barOff">&#xe60a;
+                    <i class="iconfont barOff active">&#xe60a;
                     </i>
                 </div>
                 <div id="barrageSetting"><i class="iconfont">&#xe608;</i></div>
