--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -49,7 +49,12 @@
             </form>
             <ul class="rightNav">
                 <li>
-                    <div class="avata"></div>
+                    <div class="avata">
+                        <div class="hidden">
+                            <button><i class="iconfont">&#xe626;</i>退出登录</button>
+                        </div>
+
+                    </div>
                 </li>
                 <li><i class="iconfont">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"
