登录前后变化，收藏模糊搜索

--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -531,6 +531,7 @@
                 <div class="barInput">
                     <i class="iconfont">&#xe854;</i>
                     <input placeholder="发个友善的弹幕见证当下" type="text" name="barrage" id="barrage">
+                    <div class="hidden">请先<i>登录</i>或<i>注册</i></div>
                     <button id="barrageSend">发送</button>
                     <i class="polite">弹幕礼仪<i class="iconfont">&#xe62a;</i></i>
                 </div>
@@ -656,6 +657,7 @@
                 <div class="sendComments">
                     <div class="avata"></div>
                     <input type="text" id="comments" placeholder="勇敢滴少年快去创造热评~">
+                    <div class="hidden">请先<button>登录</button>后发表评论(・ω・)</div>
                     <button class="commentSend">发布</button>
                 </div>
                 <div class="commentsList">
@@ -817,8 +819,8 @@
 
     </div>
 </body>
-<script src="./signIn.js"></script>
 <script src="video.js"></script>
+<script src="./signIn.js"></script>
 <script src="./common.js"></script>
 
 </html>
