--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -165,6 +165,9 @@
             <li><i class="iconfont">&#xe602;</i>收藏</li>
             <li><i class="iconfont">&#xe627;</i>订阅</li>
             <li><i class="iconfont">&#xe60e;</i>设置</li>
+            <li class="decoration">
+                <div></div>
+            </li>
         </ul>
         <div class="input">
             <input type="text" class="search" placeholder="搜索收藏">
@@ -194,6 +197,7 @@
             <li><i class="iconfont">&#xe602;</i>收藏</li>
             <li><i class="iconfont">&#xe627;</i>订阅</li>
             <li><i class="iconfont">&#xe60e;</i>设置</li>
+
         </ul>
         <div class="input">
             <input type="text" class="search" placeholder="搜索收藏">
