媒体查询，完事下班

--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./video.css">
     <link rel="stylesheet" href="./signIn.css">
+    <link rel="stylesheet" media='screen and (max-width:1536px)' href="index_1536px.css">
 
     <style media="(min-width:2560px)">
         body {
@@ -142,7 +143,9 @@
                             </g>
                             <path d="M6.66656 15.9095H13.3332" stroke="currentColor" stroke-width="1.7"></path>
                         </svg></i><span>创作中心</span></li>
-                <li><a href="#"><button><i class="iconfont">&#xe6b1;</i>投稿</button></a></li>
+                <li><a href="#"><button><i class="iconfont">&#xe6b1;</i>
+                            <p>投稿</p>
+                        </button></a></li>
             </ul>
         </span>
     </header>
