--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./person.css">
     <link rel="stylesheet" href="./signIn.css">
+    <link rel="stylesheet" media='screen and (max-width:1536px)' href="index_1536px.css">
+    <link rel="stylesheet" media='screen and (max-width:1395px)' href="person_1396px.css">
     <style media="(min-width:2560px)">
         body {
             width: 2560px;
         }
     </style>
-    <style media="(max-width:1020px)">
+    <style media="(max-width:1396px)">
         body {
-            width: 1020px;
+            width: 1396px;
         }
     </style>
 
@@ -143,7 +145,9 @@
                             </g>
                             <path d="M6.66656 15.9095H13.3332" stroke="currentColor" stroke-width="1.7"></path>
                         </svg></i><span>创作中心</span></li>
-                <li><a href="#"><button><i class="iconfont">&#xe6b1;</i>投稿</button></a></li>
+                <li><a href="#"><button><i class="iconfont">&#xe6b1;</i>
+                            <p>投稿</p>
+                        </button></a></li>
             </ul>
         </span>
     </header>
